--- a/03_Part_C_Principles/02_Inquiry_Principles/01_Check_that_your_estimands_are_well_defined.Rmd
+++ b/03_Part_C_Principles/02_Inquiry_Principles/01_Check_that_your_estimands_are_well_defined.Rmd
@@ -20,9 +20,9 @@ source("scripts/before_chapter_script.R")
 
 ```{r, echo = FALSE, output = FALSE, purl = FALSE}
 # run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
-do_diagnosis <- TRUE
-sims <- 10
-b_sims <- 20
+do_diagnosis <- FALSE
+sims <- 1000
+b_sims <- 1000
 ```
 
 ## Some designs have badly posed questions but design diagnosis can alert you to the problem
