--- a/index.Rmd
+++ b/index.Rmd
@@ -12,7 +12,7 @@ description: "describe the book"
 # Preface 
 
 ```{r book-setup, echo = FALSE, include = FALSE}
-knitr::opts_chunk$set(echo = TRUE, message = FALSE, cache = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, cache = FALSE)
 knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file()) # files are all relative to RStudio project home
 do_bookdown <- TRUE
 ```
