--- a/02_Part_B_Design_Library/02_Experimental_Descriptive/03_Randomized_Response.Rmd
+++ b/02_Part_B_Design_Library/02_Experimental_Descriptive/03_Randomized_Response.Rmd
@@ -21,8 +21,8 @@ source("scripts/before_chapter_script.R")
 ```{r, echo = FALSE, output = FALSE, purl = FALSE}
 # run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
 do_diagnosis <- TRUE
-sims <- 100
-b_sims <- 20
+sims <- 1000
+b_sims <- 1000
 ```
 
 ```{r, echo = FALSE}
@@ -44,33 +44,62 @@ rr_forced_known_tidy <- function(data) {
 }
 
 rr_mirrored_tidy <- function(data) {
-  fit  <- rrreg(Y_mirrored ~ 1, data = dat, p = 2/3, design = "mirrored")
+  fit  <- rrreg(Y_mirrored ~ 1, data = data, p = 2/3, design = "mirrored")
   pred <- as.data.frame(predict(fit, avg = TRUE, quasi.bayes = TRUE))
   names(pred) <- c("estimate", "std.error", "conf.low", "conf.high")
   pred$p.value <- with(pred, 2 * pnorm(-abs(estimate / std.error)))
   pred
 }
 
+proportion_shy <- .06
+
 rr_design <-
-  declare_population(N = 500, 
-                     truthful_response = rbinom(n = N, size = 1, prob = 0.3)) +
-  declare_estimand(sensitive_item_proportion = mean(truthful_response)) +
-  declare_potential_outcomes(Y_forced_known ~ (dice == 1) * 0 + (dice %in% 2:5) * truthful_response + (dice == 6) * 1, conditions = 1:6, assignment_variable = "dice") +
-  declare_potential_outcomes(Y_mirrored ~ (coin == "heads") * truthful_response + (coin == "tails") * (1 - truthful_response), conditions = c("heads", "tails"), assignment_variable = "coin") +
+  declare_population(
+    N = 100, 
+    
+    # true trump vote (unobservable)
+    truthful_trump_vote = draw_binary(.45, N),
+    
+    # shy voter (unobservable)
+    shy = draw_binary(proportion_shy, N),
+    
+    # Direct question response (1 if Trump supporter and not shy, 0 otherwise)
+    Y_direct = as.numeric(truthful_trump_vote == 1 & shy == 0)) +
+  
+  declare_estimand(sensitive_item_proportion = mean(truthful_trump_vote)) +
+  
+  declare_potential_outcomes(Y_forced_known ~ (dice == 1) * 0 + (dice %in% 2:5) * truthful_trump_vote + (dice == 6) * 1, conditions = 1:6, assignment_variable = "dice") +
+  declare_potential_outcomes(Y_mirrored ~ (coin == "heads") * truthful_trump_vote + (coin == "tails") * (1 - truthful_trump_vote), conditions = c("heads", "tails"), assignment_variable = "coin") +
+  
   declare_assignment(prob_each = rep(1/6, 6), conditions = 1:6, assignment_variable = "dice") +
   declare_assignment(prob_each = c(2/3, 1/3), conditions = c("heads", "tails"), assignment_variable = "coin") +
+  
   declare_reveal(Y_forced_known, dice) +
   declare_reveal(Y_mirrored, coin) +
+  
   declare_estimator(handler = tidy_estimator(rr_forced_known_tidy), label = "forced_known", estimand = "sensitive_item_proportion") +
-  declare_estimator(handler = tidy_estimator(rr_mirrored_tidy), label = "mirrored", estimand = "sensitive_item_proportion")
+  declare_estimator(handler = tidy_estimator(rr_mirrored_tidy), label = "mirrored", estimand = "sensitive_item_proportion") +
+  declare_estimator(Y_direct ~ 1, model = lm_robust, term = "(Intercept)", label = "direct", estimand = "sensitive_item_proportion")
 
-rr_design <- set_diagnosands(rr_design, diagnosands = declare_diagnosands(select = c(bias, rmse, power)))
-
-diag <- diagnose_design(rr_design, sims = 100, bootstrap_sims = 100)
+rr_design <- set_diagnosands(rr_design, diagnosands = declare_diagnosands(select = c(mean_estimate, bias, rmse, power)))
 ```
 
+```{r, eval = do_diagnosis}
+rr_diagnosis <- diagnose_design(rr_design, sims = sims, bootstrap_sims = b_sims)
+```
 
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("list_experiments"), "/rr_diagnosis.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(rr_diagnosis, path = rds_file_path)
+}
+rr_diagnosis <- read_rds(rds_file_path)
+```
 
+```{r}
+kable(reshape_diagnosis(rr_diagnosis))
+```
 
 
 
