--- a/02_Part_B_Design_Library/01_Observational_Descriptive/07_Multilevel_Regression_and_Postratification.Rmd
+++ b/02_Part_B_Design_Library/01_Observational_Descriptive/07_Multilevel_Regression_and_Postratification.Rmd
@@ -92,6 +92,11 @@ design <-
   declare_estimator(policy_support ~ 1, model = lm_robust)
   # declare_estimator(handler = mrp)
 
+# need to figure out how to write the mrp function
+# 1. write my own stan model
+# 2. compile it (using model())
+# 3. draw samples from it
+# 4. get out samples using tidybayes and post-stratify using dplyr
 
 # mrp <- function(data){
 #   brm_fit <- brm(
