--- a/02_Part_B_Design_Library/01_Observational_Descriptive/02_Stratified_Clustered_Sampling.Rmd
+++ b/02_Part_B_Design_Library/01_Observational_Descriptive/02_Stratified_Clustered_Sampling.Rmd
@@ -1,1 +1,165 @@
+---
+title: "Stratified clustered random sampling"
+output: html_document
+bibliography: ../../bib/book.bib 
+---
+
+<!-- note do_bookdown is set in index.rmd, so we know if you're running just this .Rmd or compiling the book-->
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = FALSE)
+knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file()) # files are all relative to RStudio project home
+```
+
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+# load common packages, set ggplot ddtheme, etc.
+source("scripts/before_chapter_script.R")
+```
+
+<!-- start post here, do not edit above -->
+
 ## Stratified clustered random sampling
+
+<!-- make sure to rename the section title below -->
+
+```{r Stratified_Clustered_Sampling, echo = FALSE, output = FALSE, purl = FALSE}
+# run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
+do_diagnosis <- FALSE
+sims <- 500
+b_sims <- 20
+```
+
+Researchers often cannot randomly sample at the individual level because it may, among other reasons, be too costly or logistically impractical. Instead, they may choose to randomly sample households, political precincts, or any group of individuals in order to draw inferences about the population. This strategy may be cheaper and simpler but may also introduce risks of less precise estimates.
+
+Say we are interested in the average party ideology in the entire state of California. Using cluster sampling, we randomly sample counties within the state, and within each selected county, randomly sample individuals to survey.
+
+Assuming enough variation in the outcome of interest, the random assignment of equal-sized clusters yields unbiased but imprecise estimates. By sampling clusters, we select groups of individuals who may share common attributes. Unlike simple random sampling, we need to take  account of this intra-cluster correlation in our estimation of the standard error.^[The intra-cluster correlation coefficient (ICC) can be calculated directly and is a feature of this design.] The higher the degree of within-cluster similarity, the more variance we observe in cluster-level averages and the more imprecise are our estimates.^[In ordinary least square (OLS) models, we assume errors are independent (error terms between individual observations are uncorrelated with each other) and homoskedastic (the size of errors is homogeneous across individuals). In reality, this is often not the case with cluster sampling.] We address this by considering cluster-robust standard errors in our answer strategy below.
+
+### Design Declaration
+
+- **M**odel: 
+
+We specify the variable of interest $Y$ (political ideology, say) as a discrete variable ranging from 1 (most liberal) to 7 (most conservative). We do not define a functional model since we are interested in the population mean of $Y$. The model also includes information about the number of sampled clusters and the number of individuals per cluster.
+
+- **I**nquiry: 
+
+Our estimand is the population mean of political identification $Y$. Because we employed random sampling, we can expect the value of the sample mean ($\widehat{\overline{y}}$) to approximate the true population parameter ($\widehat{\overline{Y}}$).
+
+- **D**ata strategy: 
+
+Sampling follows a two-stage strategy. We first draw a random sample 30 counties in California, and in each county select 20 individuals at random. This guarantees that each county has the same probability of being included in the sample and each resident within a county the same probability of being in the sample. In this design we estimate $Y$ for n = 600 respondents.
+
+- **A**nswer strategy: 
+
+We estimate the population mean with the sample mean estimator: $\widehat{\overline{Y}} = \frac{1}{n} \sum_1^n Y_i$, and estimate standard errors under the assumption of independent and heteroskedastic errors as well as cluster-robust standard errors to take into account correlation of errors within clusters. Below we demonstrate the the imprecision of our estimated $\widehat{\overline{Y}}$ when we cluster standard errors and when we do not in the presence of an intracluster correlation coefficient (ICC) of 0.402.
+
+
+```{r}
+N_blocks <- 1
+N_clusters_in_block <- 1000
+N_i_in_cluster <- 50
+n_clusters_in_block <- 30
+n_i_in_cluster <- 20
+icc <- 0.402
+
+# M: Model
+fixed_pop <-
+  declare_population(
+    block = add_level(N = N_blocks),
+    cluster = add_level(N = N_clusters_in_block),
+    subject = add_level(N = N_i_in_cluster,
+                        latent = draw_normal_icc(mean = 0, N = N, clusters = cluster, ICC = icc),
+                        Y = draw_ordered(x = latent, breaks = qnorm(seq(0, 1, length.out = 8)))
+    )
+  )()
+
+cluster_sampling_design <- declare_population(data = fixed_pop) +
+  
+  # I: Inquiry
+  declare_estimand(Ybar = mean(Y)) +
+  
+  # D: Data Strategy
+  declare_sampling(strata = block, 
+                   clusters = cluster, n = n_clusters_in_block, 
+                   sampling_variable = "Cluster_Sampling_Prob") +
+  
+  declare_sampling(strata = cluster,   n = n_i_in_cluster, 
+                   sampling_variable = "Within_Cluster_Sampling_Prob") +
+  
+  # A: Answer Strategy
+  declare_estimator(Y ~ 1,
+                    model = lm_robust,
+                    clusters = cluster,
+                    estimand = "Ybar",
+                    label = "Clustered Standard Errors")
+```
+
+### Takeaways
+
+```{r, eval = do_diagnosis & !exists("do_bookdown")}
+diagnosis <- diagnose_design(cluster_sampling_design, sims = sims)
+```
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("Stratified_Clustered_Sampling"), "/cluster_sampling_sims.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(diagnosis, path = rds_file_path)
+}
+diagnosis <- read_rds(rds_file_path)
+```
+
+```{r,eval = TRUE, echo = FALSE}
+kable(reshape_diagnosis(diagnosis), digits = 2)
+```
+
+To appreciate the role of clustering better we also plot simulated values of our estimand with standard errors not clustered and with clustered standard errors. To do this we first add an additional estimator to the design that does not take account of clusters. 
+
+```{r plot setup, echo=TRUE, warning=FALSE}
+new_design <- cluster_sampling_design + declare_estimator(Y ~ 1,
+                                                          model = lm_robust,
+                                                          estimand = "Ybar",
+                                                          label = "Naive Standard Errors")
+
+```
+```{r, eval = do_diagnosis & !exists("do_bookdown")}
+diagnosis <- diagnose_design(new_design, sims = sims)
+```
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("Stratified_Clustered_Sampling"), "/cluster_sampling_new_design_sims.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(diagnosis, path = rds_file_path)
+}
+diagnosis <- read_rds(rds_file_path)
+```
+
+```{r plot, echo=FALSE, warning=FALSE}
+sims <- diagnosis$simulations
+sims$covered <- factor(1 + (sims$conf.low < sims$estimand & sims$estimand < sims$conf.high), 1:2, labels = c("Estimand not covered by confidence interval", "Estimand covered by confidence interval"))
+sims$estimator_label <- as.factor(sims$estimator_label)
+sims$estimator_label <- factor(sims$estimator_label, levels = rev(levels(sims$estimator_label)))
+sims$estimand_label  <- as.factor(sims$estimand_label)
+
+ggplot(sims, aes(x=estimate)) +
+  geom_errorbar(aes(ymin=conf.low, ymax=conf.high, color=covered), alpha=.4) +
+  geom_hline(aes(yintercept=mean(estimand))) +
+  geom_text(aes(x=x, y=y, label=label),
+            data=function(df){
+              data.frame(x=min(df$estimate),
+                         y=mean(df$estimand),
+                         label=sprintf('  Avg Estimand:\n  %4.3f', mean(df$estimand)),
+                         stringsAsFactors = FALSE)
+            }, hjust='left') +
+  facet_wrap(estimand_label~estimator_label) +
+  ylab("Estimate") +
+  scale_x_continuous(labels=NULL, breaks = NULL, name='') +
+  scale_color_discrete(drop=FALSE, name = '') +
+  coord_flip() +
+  dd_theme()
+```
+
+The figure above may give us the impression that our estimate with clustered standard errors is less precise, when in fact, it correctly accounts for the uncertainty surrounding our estimates. The blue lines in the graph demonstrate the estimates from simulations which contain our estimand. As our table and graphs show, the share of these simulations over the total number of simulations, also known as coverage, is (correctly) close to 95% in estimations with clustered standard errors and 54% in estimations without clustered standard errors. As expected, the mean estimate itself and the bias is the same in both specifications.
+
+### References
+
+
+
