--- a/02_Part_B_Design_Library/04_Experimental_Causal/02_Blocked_and_Clusters.Rmd
+++ b/02_Part_B_Design_Library/04_Experimental_Causal/02_Blocked_and_Clusters.Rmd
@@ -1,1 +1,110 @@
+---
+title: "Experiments with blocks and clusters"
+output: html_document
+bibliography: ../../bib/book.bib 
+---
+
+<!-- note do_bookdown is set in index.rmd, so we know if you're running just this .Rmd or compiling the book-->
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = FALSE)
+knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file()) # files are all relative to RStudio project home
+```
+
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+# load common packages, set ggplot ddtheme, etc.
+source("scripts/before_chapter_script.R")
+```
+
+<!-- start post here, do not edit above -->
+
 ## Experiments with blocks and clusters
+
+<!-- make sure to rename the section title below -->
+
+```{r Blocked_and_Clusters, echo = FALSE, output = FALSE, purl = FALSE}
+# run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
+do_diagnosis <- TRUE
+sims <- 500
+b_sims <- 20
+```
+Blocked cluster designs involve units that are grouped into clusters which are in turn grouped into blocks. 
+
+The clusters are assigned as a group to either treatment or control. When the clusters are of equal size the difference-in-means estimator yields unbiased but possibly imprecise estimates, especially when individuals are very similar within clusters and share characteristics that can potentially influence outcomes. 
+
+In addition (optionally) clusters are assigned within blocks. Ideally clusters within a block are similar. For instance blocks might be formed on the basis of pre-treatment covariates. Treatment is then assigned *within* each block.  Two main objectives can be achieved with block randomization: first, we can reduce sampling variability when individuals that belong to a specific block have similar potential outcomes. Secondly, we can ensure that certain characteristics that we care about are present at a particular rate in our treatment and control samples. For instance, policymakers might be interested in having an equal number of women and men in treatment and control. By defining one block as men and another as women and conducting the randomization separately for each gender, we can ensure that exactly half of the men and half of the women are treated.
+
+As a rule of thumb having blocks improves precision but having clusters weakens precision. Despite their drawbacks, cluster designs are sometimes unavoidable. For instance, imagine that we want to evaluate the effects of radio advertisements on donations to aid relief campaigns. It is, of course, impossible to target such advertising to a single individual, and the treatment must instead be assigned at a higher level; for instance at the city level.
+
+
+### Design Declaration
+
+- **M**odel:  
+
+    We specify a population of `N`  units partitioned into `N_blocks` (regions, say). Each block has `N_clusters_in_block` clusters (cities, say) and within each cluster there are `N_in_cluster` individuals.  The variance of an individual's outcomes has three components: the block's variance, the cluster's variance and the subject's variance. 
+  
+- **I**nquiry: 
+
+    We are interested in the average difference in individuals' treatment and control outcomes, $E[Y_i(Z = 1) - Y_i(Z = 0)]$.
+
+- **D**ata strategy:  
+
+    The units of randomization are cities (clusters). Cities are blocked by region so that we ensure that equal numbers of cities from each region are included in control and in treatment. All individuals belonging to the same city are either treated or assigned to control.
+
+- **A**nswer strategy: 
+
+    We estimate the average treatment effect using a linear model that accounts for block structure and clusters.
+
+```{r, code = get_design_code(block_cluster_two_arm_designer(N_blocks = 4, N_clusters_in_block = 4, N_i_in_cluster = 5,sd_cluster = 2)), eval=TRUE}
+
+```
+
+### Takeaways
+
+To better illustrate how different sources of variance differentially affect our power, we compare three designs. Each of them features a design with 50 blocks featuring two clusters each, with 10 individuals per cluster. In each design the effect size is .25 and the standard deviation in the outcome is 1 (when possible the designer defaults to a variance for the individual shock such that total variance =1). In the first, all of the variance derives from differences between individuals, in the second it derives from differences between clusters, and in the third it derives from variance between blocks.  
+
+```{r,eval = TRUE,message=FALSE}
+individual_var <- block_cluster_two_arm_designer(N_blocks = 50, 
+                                                 N_clusters_in_block = 2, 
+                                                 N_i_in_cluster = 10, 
+                                                 sd_block = 0,
+                                                 sd_cluster = 0,
+                                                 ate = .25)
+cluster_var   <- block_cluster_two_arm_designer(N_blocks = 50, 
+                                                 N_clusters_in_block = 2,
+                                                 N_i_in_cluster = 10, 
+                                                 sd_block = 0,
+                                                 sd_cluster = .99,
+                                                 ate = .25)
+block_var     <- block_cluster_two_arm_designer(N_blocks = 50, 
+                                                 N_clusters_in_block = 2,
+                                                 N_i_in_cluster = 10, 
+                                                 sd_block = .99,
+                                                 sd_cluster = 0,
+                                                 ate = .25)
+```
+
+```{r, eval = do_diagnosis & !exists("do_bookdown")}
+diagnosis <- diagnose_design(individual_var, cluster_var, block_var, sims = sims)
+```
+
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("Blocked_and_Clusters"), "/blocked_and_clusters_diagnosis.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(diagnosis, path = rds_file_path)
+}
+diagnosis <- read_rds(rds_file_path)
+```
+
+```{r,eval = TRUE, echo = FALSE}
+kable(reshape_diagnosis(diagnosis), digits = 2)
+```
+
+Diagnosis reveals that the efficiency is greatest when variance comes from blocks, and lowest when it comes from clusters. The reason for this is that our estimator models block-level variance, and can estimate the treatment effect independently from block-level effects because treatment assignment is orthogonal to blocks. However, any variance at the cluster level covaries with our treatment, and thus makes it harder to estimate the treatment effect. 
+
+### References
+
+
+
+
+
