--- a/02_Part_B_Design_Library/01_Observational_Descriptive/06_Topic_Analysis.Rmd
+++ b/02_Part_B_Design_Library/01_Observational_Descriptive/06_Topic_Analysis.Rmd
@@ -37,73 +37,163 @@ library(MCMCpack)
 
 ```{r}
 lda_tidy <- function(data, k, matrix) {
-  tdm <- data %>% cast_dtm(title_chapter, word, n)
+  tdm <- data %>% 
+    mutate(word = as.character(word)) %>% 
+    group_by(document, word) %>% 
+    count %>% 
+    ungroup %>% 
+    cast_dtm(document, word, n)
   fit <- LDA(x = tdm, k = k)
-  tidy(fit, matrix = matrix)
+  tidy(fit, matrix = matrix) %>% 
+    group_by(topic) %>% 
+    top_n(10, beta) %>%
+    arrange(-beta) %>% 
+    mutate(word_num = 1:n()) %>% 
+    ungroup %>% 
+    arrange(topic, -beta) %>% 
+    dplyr::select(-beta) %>% 
+    spread(word_num, term) %>% 
+    unite(top_10_words, `1`:`10`) %>% 
+    spread(topic, top_10_words) %>% 
+    rename(topic_1_top_10_words = `1`, topic_2_top_10_words = `2`)
 }
 
-topic_1_corpus <- c("democrat", "liberal", "left wing", "social services")
-topic_2_corpus <- c("republican", "gop", "right", "conservative", "taxes")
+laws <- gutenberg_download(c(2, 17150)) %>% 
+  group_by(gutenberg_id) %>% 
+  slice(-c(1:10)) %>% 
+  ungroup %>% 
+  unnest_tokens(word, text) %>%
+  anti_join(stop_words)
+
+topic_probs <- laws %>% 
+  group_by(gutenberg_id) %>% 
+  mutate(topic_n = n()) %>%
+  group_by(gutenberg_id, word) %>% 
+  summarize(topic_n = unique(topic_n), word_count = n(),
+            word_prob = word_count / topic_n) %>% 
+  ungroup
+  
+topic_probs <- topic_probs %>% 
+  expand(gutenberg_id, word) %>% 
+  left_join(topic_probs) %>% 
+  dplyr::select(gutenberg_id, word, word_prob) %>% 
+  spread(gutenberg_id, word_prob) %>% 
+  rename(pr_topic_1 = `2`,
+         pr_topic_2 = `17150`) %>% 
+  mutate(pr_topic_1 = replace_na(pr_topic_1, 0),
+         pr_topic_2 = replace_na(pr_topic_2, 0))
+
+corpus <- topic_probs %>% pull(word)
+topic_1_prob <- topic_probs %>% pull(pr_topic_1)
+topic_2_prob <- topic_probs %>% pull(pr_topic_2)
+```
+
+
+```{r declaration}
+N_documents <- 50
+N_topics    <- 2
 
 design <-
   declare_population(
     document = add_level(
-      N = 50,
-      # sample proportion of the document that is drawn from topic 1 and topic 2
-      document_proportion_topic_1 = runif(N, 0, 1),
-      # documents are between 5 and 10 words
-      N_words = sample(5:10, N, replace = TRUE)
+      N = 200,
+      
+      # document length is drawn from a Poisson distribution
+      N_words_per_document = rpois(N, lambda = 150),
+      
+      # draw topic proportion for each document from Dirichlet; save pr(topic1)
+      theta_topic2 =  rdirichlet(N, alpha = rep(1, N_topics))[, 2]
     ),
-    topic = add_level(
-      N = 2, 
-      topic = c(1, 2), 
-      N_words_topic_1 = ceiling(document_proportion_topic_1 * N_words),
-      N_words_topic_2 = N_words - N_words_topic_1,
-      N_words_per_topic = if_else(topic == 1, N_words_topic_1, N_words_topic_2)
-
-      # N_words_per_topic = ceiling(document_proportion_topic_1 * N_words)
-      # c(floor(document_proportion_topic_1 * N_words),
-                            # N_words - floor(document_proportion_topic_1 * N_words))
-    ),
-    term = add_level(
-      N = N_words_per_topic,
-      terms =
-        if_else(topic == 1,
-                sample(topic_1_corpus, N, replace = TRUE),
-                sample(topic_2_corpus, N, replace = TRUE))
+    
+    words = add_level(
+      N = N_words_per_document,
+      
+      # draw topic (1 or 2) based on theta probabilities for the document
+      topic = simple_ra(N, prob = theta_topic2, conditions = 1:2),
+      
+      word = case_when(
+        topic == 1 ~ simple_ra(N, prob_each = topic_1_prob, conditions = corpus),
+        topic == 2 ~ simple_ra(N, prob_each = topic_2_prob, conditions = corpus)
+      )
     )
   ) +
+  
   declare_estimator(
-    handler = tidy_estimator(lda_tidy), k = 2, matrix = "gamma",
+    handler = tidy_estimator(lda_tidy), k = 2, matrix = "beta",
     label = "lda-topics")
-
-declare_diagnosands()
-
-draw_estimates(design)
 ```
-
-
-This chunk is set to `echo = TRUE` and `eval = do_diagnosis`
-```{r, eval = do_diagnosis & !exists("do_bookdown")}
-simulations_pilot <- simulate_design(design, sims = sims)
-```
-
-Right after you do simulations, you want to save the simulations rds. 
-
-```{r, echo = FALSE, purl = FALSE}
-# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
-rds_file_path <- paste0(get_dropbox_path("section_template"), "/simulations_pilot.RDS")
-if (do_diagnosis & !exists("do_bookdown")) {
-  write_rds(simulations_pilot, path = rds_file_path)
-}
-simulations_pilot <- read_rds(rds_file_path)
-```
-
-Now all that simulating, saving, and loading is done, and we can use the simulations for whatever you want.
 
 ```{r}
-kable(head(simulations_pilot))
+dat <- draw_data(design)
+
+document1 <- data %>% dplyr::filter(document == "001") %>% pull(word) %>% paste0(collapse = " ")
+document2 <- data %>% dplyr::filter(document == "002") %>% pull(word) %>% paste0(collapse = " ")
+
+kable(cbind(document1, document2), col.names = c("Document 1", "Document 2"))
 ```
+
+
+```{r}
+# diagnosis
+
+compare_word_lists <- function(list1, list2){
+  list1 <- str_split(list1, "_")
+  list2 <- str_split(list2, "_")[[1]]
+  sapply(list1, function(x) sum(x %in% list2) == length(list2))
+}
+
+topic_1_words <- topic_probs %>% top_n(3, pr_topic_1) %>% arrange(-pr_topic_1) %>% slice(1:3) %>% pull(word) %>% paste0(collapse = "_")
+topic_2_words <- topic_probs %>% top_n(3, pr_topic_2) %>% arrange(-pr_topic_2) %>% slice(1:3) %>% pull(word) %>% paste0(collapse = "_")
+
+diag <- declare_diagnosands(in_topic_1 = 
+                              mean(compare_word_lists(topic_1_top_10_words, topic_1_words) |
+                                     compare_word_lists(topic_2_top_10_words, topic_1_words)),
+                            in_topic_2 = 
+                              mean(compare_word_lists(topic_1_top_10_words, topic_2_words) |
+                                     compare_word_lists(topic_2_top_10_words, topic_2_words)),
+                            in_either_topic = 
+                              mean(compare_word_lists(topic_1_top_10_words, topic_1_words) |
+                                     compare_word_lists(topic_2_top_10_words, topic_1_words) |
+                                     compare_word_lists(topic_1_top_10_words, topic_2_words) |
+                                     compare_word_lists(topic_2_top_10_words, topic_2_words )),
+                            in_both_topic = 
+                              mean( (compare_word_lists(topic_1_top_10_words, topic_1_words) |
+                                     compare_word_lists(topic_1_top_10_words, topic_2_words)) &
+                                     compare_word_lists(topic_2_top_10_words, topic_1_words) |
+                                     compare_word_lists(topic_2_top_10_words, topic_2_words )),
+                            keep_defaults = FALSE)
+
+diagnosis <- 
+  diagnose_design(design, diagnosands = diag, sims = 10, bootstrap_sims = 10)
+```
+
+
+
+
+
+
+
+<!-- This chunk is set to `echo = TRUE` and `eval = do_diagnosis` -->
+<!-- ```{r, eval = do_diagnosis & !exists("do_bookdown")} -->
+<!-- simulations_pilot <- simulate_design(design, sims = sims) -->
+<!-- ``` -->
+
+<!-- Right after you do simulations, you want to save the simulations rds.  -->
+
+<!-- ```{r, echo = FALSE, purl = FALSE} -->
+<!-- # figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file -->
+<!-- rds_file_path <- paste0(get_dropbox_path("section_template"), "/simulations_pilot.RDS") -->
+<!-- if (do_diagnosis & !exists("do_bookdown")) { -->
+<!--   write_rds(simulations_pilot, path = rds_file_path) -->
+<!-- } -->
+<!-- simulations_pilot <- read_rds(rds_file_path) -->
+<!-- ``` -->
+
+<!-- Now all that simulating, saving, and loading is done, and we can use the simulations for whatever you want. -->
+
+<!-- ```{r} -->
+<!-- kable(head(simulations_pilot)) -->
+<!-- ``` -->
 
 # References
 
