--- a/02_Part_B_Design_Library/01_Observational_Descriptive/06_Topic_Analysis.Rmd
+++ b/02_Part_B_Design_Library/01_Observational_Descriptive/06_Topic_Analysis.Rmd
@@ -22,7 +22,7 @@ source("scripts/before_chapter_script.R")
 ```{r section_title, echo = FALSE, output = FALSE, purl = FALSE}
 # run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
 do_diagnosis <- FALSE
-sims <- 100
+sims <- 20
 b_sims <- 20
 ```
 
@@ -99,7 +99,7 @@ design <-
       N = 200,
       
       # document length is drawn from a Poisson distribution
-      N_words_per_document = rpois(N, lambda = 150),
+      N_words_per_document = rpois(N, lambda = 500),
       
       # draw topic proportion for each document from Dirichlet; save pr(topic1)
       theta_topic2 =  rdirichlet(N, alpha = rep(1, N_topics))[, 2]
@@ -126,8 +126,8 @@ design <-
 ```{r}
 dat <- draw_data(design)
 
-document1 <- data %>% dplyr::filter(document == "001") %>% pull(word) %>% paste0(collapse = " ")
-document2 <- data %>% dplyr::filter(document == "002") %>% pull(word) %>% paste0(collapse = " ")
+document1 <- dat %>% dplyr::filter(document == "001") %>% pull(word) %>% paste0(collapse = " ")
+document2 <- dat %>% dplyr::filter(document == "002") %>% pull(word) %>% paste0(collapse = " ")
 
 kable(cbind(document1, document2), col.names = c("Document 1", "Document 2"))
 ```
@@ -162,9 +162,6 @@ diag <- declare_diagnosands(in_topic_1 =
                                      compare_word_lists(topic_2_top_10_words, topic_1_words) |
                                      compare_word_lists(topic_2_top_10_words, topic_2_words )),
                             keep_defaults = FALSE)
-
-diagnosis <- 
-  diagnose_design(design, diagnosands = diag, sims = 10, bootstrap_sims = 10)
 ```
 
 
@@ -174,26 +171,27 @@ diagnosis <-
 
 
 <!-- This chunk is set to `echo = TRUE` and `eval = do_diagnosis` -->
-<!-- ```{r, eval = do_diagnosis & !exists("do_bookdown")} -->
-<!-- simulations_pilot <- simulate_design(design, sims = sims) -->
-<!-- ``` -->
+```{r, eval = do_diagnosis & !exists("do_bookdown")}
+diagnosis <- 
+  diagnose_design(design, diagnosands = diag, sims = 10, bootstrap_sims = 10)
+```
 
 <!-- Right after you do simulations, you want to save the simulations rds.  -->
 
-<!-- ```{r, echo = FALSE, purl = FALSE} -->
-<!-- # figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file -->
-<!-- rds_file_path <- paste0(get_dropbox_path("section_template"), "/simulations_pilot.RDS") -->
-<!-- if (do_diagnosis & !exists("do_bookdown")) { -->
-<!--   write_rds(simulations_pilot, path = rds_file_path) -->
-<!-- } -->
-<!-- simulations_pilot <- read_rds(rds_file_path) -->
-<!-- ``` -->
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("topic_analysis"), "/simulations.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(diagnosis, path = rds_file_path)
+}
+diagnosis <- read_rds(rds_file_path)
+```
 
 <!-- Now all that simulating, saving, and loading is done, and we can use the simulations for whatever you want. -->
 
-<!-- ```{r} -->
-<!-- kable(head(simulations_pilot)) -->
-<!-- ``` -->
+```{r}
+kable(reshape_diagnosis(diagnosis))
+```
 
 # References
 
