--- a/02_Part_B_Design_Library/04_Experimental_Causal/04_Encouragement_Designs.Rmd
+++ b/02_Part_B_Design_Library/04_Experimental_Causal/04_Encouragement_Designs.Rmd
@@ -1,1 +1,122 @@
+---
+title: "Encouragement designs"
+output: html_document
+bibliography: ../../bib/book.bib 
+---
+
+
+
+
+<!-- note do_bookdown is set in index.rmd, so we know if you're running just this .Rmd or compiling the book-->
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = FALSE)
+knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file()) # files are all relative to RStudio project home
+```
+
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+# load common packages, set ggplot ddtheme, etc.
+source("scripts/before_chapter_script.R")
+```
+
+<!-- start post here, do not edit above -->
+
 ## Encouragement designs
+
+Idea for this one would be to show how violations of no defiers and excludability lead to bias.
+
+<!-- make sure to rename the section title below -->
+
+```{r encouragement, echo = FALSE, output = FALSE, purl = FALSE}
+# run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
+do_diagnosis <- FALSE
+sims <- 100
+b_sims <- 20
+```
+
+```{r}
+types <- c("Always-Taker", "Never-Taker", "Complier", "Defier")
+direct_effect_of_encouragement <- 0.0
+proportion_defiers <- 0.0
+
+design <-
+  declare_population(
+    N = 500,
+    type = sample(
+      types,
+      N,
+      replace = TRUE,
+      prob = c(0.1, 0.1, 0.8 - proportion_defiers, proportion_defiers)
+    ),
+    noise = rnorm(N)
+  ) +
+  declare_potential_outcomes(
+    D ~ case_when(
+      Z == 0 & type %in% c("Never-Taker", "Complier") ~ 0,
+      Z == 1 & type %in% c("Never-Taker", "Defier") ~ 0,
+      Z == 0 & type %in% c("Always-Taker", "Defier") ~ 1,
+      Z == 1 & type %in% c("Always-Taker", "Complier") ~ 1
+    )
+  ) +
+  declare_potential_outcomes(
+    Y ~ 0.5 * (type == "Complier") * D +
+      0.25 * (type == "Always-Taker") * D +
+      0.75 * (type == "Defier") * D +
+      direct_effect_of_encouragement * Z + noise,
+    assignment_variables = c("D", "Z")
+  ) +
+  declare_estimand(CACE = mean((Y_D_1_Z_1 + Y_D_1_Z_0) / 2 -
+                                 (Y_D_0_Z_1 + Y_D_0_Z_0) / 2),
+                   subset = type == "Complier") +
+  declare_assignment(prob = 0.5) +
+  declare_reveal(D, assignment_variable = "Z") +
+  declare_reveal(Y, assignment_variables = c("D", "Z")) +
+  declare_estimator(Y ~ D | Z, model = iv_robust, estimand = "CACE")
+
+```
+
+
+```{r, eval = do_diagnosis & !exists("do_bookdown")}
+designs <- redesign(
+  design,
+  proportion_defiers = seq(0, 0.3, length.out = 5),
+  direct_effect_of_encouragement = seq(0, 0.3, length.out = 5)
+)
+
+simulations <- simulate_design(designs, sims = sims)
+```
+
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("04_Encouragement_Designs.Rmd"), "/simulations_pilot.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(simulations, path = rds_file_path)
+}
+simulations <- read_rds(rds_file_path)
+```
+
+
+```{r}
+gg_df <-
+  simulations %>%
+  group_by(proportion_defiers,
+           direct_effect_of_encouragement) %>%
+  summarize(bias = mean(estimate - estimand))
+
+
+ggplot(gg_df,
+       aes(
+         proportion_defiers,
+         bias,
+         group = direct_effect_of_encouragement,
+         color = direct_effect_of_encouragement
+       )) +
+  geom_point() +
+  geom_line() 
+```
+
+# References
+
+
+
+
+
