--- a/bib/book.bib
+++ b/bib/book.bib
@@ -14,9 +14,7 @@
 	Date-Modified = {2019-01-23 14:57:08 -0800},
 	School = {George Washington University},
 	Title = {A new survey technique for studying deviant behavior},
-	Url = {https://books.google.com/books/about/A_New_Survey_Technique_for_Studying_Devi.html?id=UZSgQgAACAAJ},
-	Year = {1984},
-	Bdsk-Url-1 = {https://books.google.com/books/about/A_New_Survey_Technique_for_Studying_Devi.html?id=UZSgQgAACAAJ}}
+	Year = {1984}}
 
 @article{coppock2017constitution,
 	Author = {Coppock, Alexander and David Kirby and Donald P. Green},
