--- a/02_Part_B_Design_Library/01_Observational_Descriptive/06_Topic_Analysis.Rmd
+++ b/02_Part_B_Design_Library/01_Observational_Descriptive/06_Topic_Analysis.Rmd
@@ -19,7 +19,7 @@ source("scripts/before_chapter_script.R")
 
 ## Topic analysis
 
-```{r section_title, echo = FALSE, output = FALSE, purl = FALSE}
+```{r topic_analysis, echo = FALSE, output = FALSE, purl = FALSE}
 # run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
 do_diagnosis <- FALSE
 sims <- 20
@@ -89,7 +89,7 @@ topic_2_prob <- topic_probs %>% pull(pr_topic_2)
 ```
 
 
-```{r declaration}
+```{r}
 N_documents <- 50
 N_topics    <- 2
 
